# SFMC-qml

./: Btn.qml  CMakeLists.txt  Home.qml  LICENSE  Player.qml  README.md  SFMC.qmlproject  log.md  main.qml  qmlmodules  res.qrc
SFMCL/: CMakeLists.txt  SFMCL.qmlproject  SFMCL.qmlproject.qtds  main.qml  qmlmodules  res.qrc
SFMCL/comp/: BackBtn.qml  GlobalTips.qml  Icon.qml  Player.qml  ShadowRectangle.qml  ThemeButton.qml  ThemeCheckBox.qml  ThemeDialog.qml  ThemeDrawer.qml  ThemeRadio.qml  ThemeSlider.qml  ThemeTextArea.qml  ThemeTextInput.qml  ThemeToolTip.qml  ThemeTopProcessTips.qml  TopBtn.qml
SFMCL/content/: App.qml  Screen01.ui.qml
SFMCL/imports/: CMakeLists.txt
SFMCL/imports/SFMCL/: CMakeLists.txt  qmldir
SFMCL/src/: import_qml_plugins.h  launcher.cpp  launcher.h  main.cpp
SFMCL/src/entity/: download.cpp  download.h  downloader.cpp  downloader.h  player.cpp  player.h
SFMCL/src/util/: downloadutil.cpp  downloadutil.h  filedirutil.cpp  filedirutil.h  stdutil.h  (+7 more)
SFMCL/view/: Download.qml  Home.qml  Setting.qml
comp/: BackBtn.qml  CloseBtn.qml  Empty.qml  GlobalTips.qml  MiniBtn.qml  Player.qml  ShadowRectangle.qml  ThemeButton.qml  ThemeDialog.qml  ThemeRadio.qml  ThemeSlider.qml  ThemeTextArea.qml  ThemeTextInput.qml  ThemeToolTip.qml  TopBtn.qml
content/: App.qml
imports/: CMakeLists.txt
imports/SFMC/: CMakeLists.txt  qmldir
src/: import_qml_plugins.h  launcher.cpp  launcher.h  launcherutil.cpp  launcherutil.h  main.cpp  player.h  stdutil.cpp  stdutil.h
src/entity/: lib.cpp  lib.h
src/util/: launcherutil.cpp  launcherutil.h  networkutil.cpp  networkutil.h  stdutil.cpp  stdutil.h
view/: Download.qml  Home.qml  Setting.qml
view/home/: MinecraftInfo.qml  MinecraftSetting.qml  VersionSelect.qml  VersionSetting.qml
view/setting/: Helping.qml
(+13 files in other folders)
